First pass implementation for dynamic updating of rows.
Change-Id: Ifd15919066825d7269bbe4efcb4d51b8ed19baed

--- a/horizon/horizon/templates/horizon/common/_data_table.html
+++ b/horizon/horizon/templates/horizon/common/_data_table.html
@@ -14,11 +14,7 @@
   </thead>
   <tbody>
   {% for row in rows %}
-  <tr id="{{ row.id }}" class="{% cycle 'odd' 'even' %} {{ row.status_class }}">
-    {% for cell in row %}
-    <td class="{{ cell.get_classes }}">{{ cell.value }}</td>
-    {% endfor %}
-  </tr>
+    {{ row.render }}
   {% empty %}
   <tr class="{% cycle 'odd' 'even' %} empty">
     <td colspan="{{ table.get_columns|length }}">{{ table.get_empty_message }}</td>
