--- a/openstack_dashboard/templates/_header.html
+++ b/openstack_dashboard/templates/_header.html
@@ -2,6 +2,6 @@
 <div id="user_info" class="pull-right">
   <span>{% trans "Logged in as" %}: {{ request.user.username }}</span>
   <a href="{% url horizon:settings:user:index %}">{% trans "Settings" %}</a>
-  <a href="{% url horizon:auth_logout %}">{% trans "Sign Out" %}</a>
+  <a href="{% url logout %}">{% trans "Sign Out" %}</a>
   {% include "horizon/common/_region_selector.html" %}
 </div>
