--- a/openstack_dashboard/templates/base.html
+++ b/openstack_dashboard/templates/base.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type' />
-    <title>{% block title %}{% endblock %} – {% site_branding %} Dashboard</title>
+    <title>{% block title %}{% endblock %} - {% site_branding %}</title>
     {% include "horizon/_conf.html" %}
     {% block css %}
       {% include "_stylesheets.html" %}
