--- a/horizon/templates/horizon/common/_sidebar.html
+++ b/horizon/templates/horizon/common/_sidebar.html
@@ -22,7 +22,7 @@
           <li class='divider'></li>
           {% for tenant in authorized_tenants %}
             {% if tenant.enabled and tenant.id != request.user.tenant_id %}
-              <li><a href="{% url horizon:auth_switch tenant.id %}">{{ tenant.name }}</a></li>
+              <li><a href="{% url switch_tenants tenant.id %}">{{ tenant.name }}</a></li>
             {% endif %}
           {% endfor %}
         </ul>
