--- a/openstack_dashboard/templates/splash.html
+++ b/openstack_dashboard/templates/splash.html
@@ -1,14 +1,16 @@
+{% load i18n branding %}
+
 <!DOCTYPE html>
 <html lang="en" xml:lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Login – OpenStack Dashboard</title>
+    <title>{% trans "Login" %} - {% site_branding %}</title>
     {% include "_stylesheets.html" %}
   </head>
   <body id="splash">
     <div class="container">
       <div class="row large-rounded">
-        {% include 'horizon/auth/_login.html' %}
+        {% include 'auth/_login.html' %}
       </div>
     </div>
   </body>
