Adds initial workflow support to Horizon.
Implements blueprint workflows.

Adds a reusable workflow component to Horizon, and puts it
to use for the Launch Instance user interface. Contains
tests with roughly 90% coverage and full documentation.

Change-Id: I7325ef9db2ba2496d3fc1e2767cfeda50c71cbca

--- a/openstack_dashboard/templates/_scripts.html
+++ b/openstack_dashboard/templates/_scripts.html
@@ -24,6 +24,7 @@
 <script src='{{ STATIC_URL }}horizon/js/modals.js' type='text/javascript' charset='utf-8'></script>
 <script src='{{ STATIC_URL }}horizon/js/forms.js' type='text/javascript' charset='utf-8'></script>
 <script src='{{ STATIC_URL }}horizon/js/form_examples.js' type='text/javascript' charset='utf-8'></script>
+<script src='{{ STATIC_URL }}horizon/js/quotas.js' type='text/javascript' charset='utf-8'></script>
 
 {% comment %} Client-side Templates {% endcomment %}
 {% include "horizon/client_side/templates.html" %}
