--- a/horizon/templates/horizon/common/_form_fields.html
+++ b/horizon/templates/horizon/common/_form_fields.html
@@ -2,7 +2,7 @@
   {{ hidden }}
 {% endfor %}
 {% if form.non_field_errors %}
-  <div class="alert alert-message error">
+  <div class="alert alert-message alert-error">
     {{ form.non_field_errors }}
   </div>
 {% endif %}
