--- a/horizon/dashboards/nova/templates/nova/objects/_copy.html
+++ b/horizon/dashboards/nova/templates/nova/objects/_copy.html
@@ -14,7 +14,7 @@
 </div>
 <div class="right">
     <h3>{% trans "Description" %}:</h3>
-    <p>{% trans "You may make a new copy of an existing object to store in this or another container." %}</p>
+    <p>{% trans "Make a new copy of an existing object to store in this or another container. You may also specify a path at which the new copy should live inside of the selected container." %}</p>
 </div>
 {% endblock %}
 
