--- a/horizon/dashboards/nova/templates/nova/images_and_snapshots/images/_create.html
+++ b/horizon/dashboards/nova/templates/nova/images_and_snapshots/images/_create.html
@@ -15,10 +15,14 @@
 <div class="right">
     <h3>{% trans "Description:" %}</h3>
     <p>
-        {% trans "From here you can specify the different properties of an image." %}
+        {% trans "Specify an image to upload to the Image Service." %}
     </p>
     <p>
-        {% trans "Currently only images hosted on a remote server are supported. Be aware that these remote locations must be available depending on your network configuration." %}
+        {% trans "Currently only images available via an HTTP URL are supported. The image location must be accessible to the Image Service. Compressed image binaries are supported (.zip and .tar.gz.)" %}
+    </p>
+    <p>
+        <strong>{% trans "Please note: " %}</strong>
+        {% trans "The Image Location field MUST be a valid and direct URL to the image binary. URLs that redirect or serve error pages will results in unusable images." %}
     </p>
 </div>
 {% endblock %}
