Inline object creation.
Allows the creation of related objects during a workflow.
For example, this patch implements importing keypairs during
the launch instance workflow and allocating floating IP
addresses during the floating IP associate workflow.

This required several significant changes:

  * SelfHandlingForm should no long return a redirect.
    Instead, it should return either the object it
    created/acted on, or else a boolean such as True.

  * The ModalFormView now differentiates between GET
    and POST.

  * Due to the previous two items, SelfHandlingForm
    was mostly gutted (no more maybe_handle, etc.).

  * Modals now operate via a "stack" where only the
    top modal is visible at any given time and closing
    one causes the next one to become visible.

In the process of these large changes there was a large
amount of general code cleanup, especially in the javascript
code and the existing SelfHandlingForm subclasses/ModalFormView
subclasses. Many small bugs were fixed along with the cleanup.

Implements blueprint inline-object-creation.

Fixes bug 994677.

Change-Id: I1808b34cbf6f813eaedf767a6364e815c0c5e969

--- a/horizon/templates/horizon/client_side/_loading.html
+++ b/horizon/templates/horizon/client_side/_loading.html
@@ -6,7 +6,7 @@
 {% block template %}
 {% jstemplate %}
 <div class="modal loading hide">
-  <p>{% trans "Loading&hellip;" %}</p>
+  <p>[[text]]&hellip;</p>
 </div>
 {% endjstemplate %}
 {% endblock %}
