--- a/horizon/templates/horizon/qunit.html
+++ b/horizon/templates/horizon/qunit.html
@@ -26,7 +26,7 @@
       <!-- Test markup; will be hidden. -->
       <div id="main_content">
         <div class="messages"></div>
-        <div class="modal_wrapper"></div>
+        <div id="modal_wrapper"></div>
       </div>
     </div>
   </body>
