--- a/openstack_dashboard/templates/base.html
+++ b/openstack_dashboard/templates/base.html
@@ -29,6 +29,6 @@
     {% block js %}
       {% include "horizon/_scripts.html" %}
     {% endblock %}
-    <div class="modal_wrapper" />
+    <div id="modal_wrapper" />
   </body>
 </html>
